--- a/Jarvis Voice Assistant/www/index.html
+++ b/Jarvis Voice Assistant/www/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jarvis</title>
 
+        <link rel="shortcut icon" href="assets/img/logo.ico"
+            type="image/x-icon">
+
         <!-- Boostrap -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
@@ -71,5 +74,6 @@
 
         <script src="main.js"></script>
 
+        <script src="/eel.js"></script>
     </body>
 </html>
